changes to carousel clipping to avoid issues

--- a/css/application.css
+++ b/css/application.css
@@ -792,7 +792,7 @@ button.searchicon--mobile {
   background: white;
   align-self: center;
   margin: auto;
-  transition: .3s ease; }
+  transition: .2s ease; }
   .hamburger::before, .hamburger::after {
     content: "";
     display: block;
@@ -802,21 +802,21 @@ button.searchicon--mobile {
     position: absolute; }
   .hamburger::before {
     top: -10px;
-    transition: top .3s ease .3s; }
+    transition: top .2s ease .2s; }
   .hamburger::after {
     bottom: -10px;
-    transition: bottom .3s ease .3s; }
+    transition: bottom .2s ease .2s; }
 
 .hamburger-anim-in {
   transform: rotate(225deg);
-  transition: transform .3s ease .3s; }
+  transition: transform .2s ease .2s; }
   .hamburger-anim-in::before {
     top: 0;
-    transition: top .3s ease-out, transform .3s ease .3s;
+    transition: top .2s ease-out, transform .2s ease .2s;
     transform: rotate(-90deg); }
   .hamburger-anim-in::after {
     bottom: 0;
-    transition: bottom .3s ease-out, transform .3s ease .3s; }
+    transition: bottom .2s ease-out, transform .2s ease .2s; }
 
 .submenu {
   z-index: 1;
@@ -1118,7 +1118,8 @@ footer {
   font-size: .8em; }
   #footer__bottom p {
     width: 60%;
-    margin: auto; }
+    margin: auto;
+    text-align: center; }
 
 .card {
   box-shadow: 0px 0px 10px #a3a8ac;
@@ -1564,9 +1565,6 @@ a.social[href*="instagram"]:hover {
     text-transform: uppercase;
     color: white; }
 
-.slick-list {
-  overflow: visible; }
-
 button.green {
   background: #30cc74; }
 button.purple {
@@ -1575,6 +1573,9 @@ button.yellow {
   background: #f7b322; }
 button.blue {
   background: #4884d4; }
+
+.slick-list {
+  overflow: visible; }
 
 .section__header {
   margin: 50px auto;
