--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -76,6 +76,7 @@ footer {
     p {
         width: 60%;
         margin: auto;
+        text-align: center;
     }
     
 }
